force-app/main/default/objects/Books__c/fields/ISBN__c.field-meta.xml
<CustomField>
    <fullName>ISBN__c</fullName>
    <label>ISBN</label>
    <length>10</length>
    <type>Text</type>
</CustomField>