force-app/main/default/objects/Books__c/fields/Issued_Count__c.field-meta.xml
<CustomField>
    <fullName>Issued_Count__c</fullName>
    <label>Issued Count</label>
    <summaryForeignKey>Book_Issue__c.Books__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>