force-app/main/default/objects/Books__c/fields/No_Of_Lost_Copy__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Lost_Copy__c</fullName>
    <label>No.Of.Lost.Copy</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>