force-app/main/default/objects/Books__c/fields/Price_Of_The_Book__c.field-meta.xml
<CustomField>
    <fullName>Price_Of_The_Book__c</fullName>
    <label>Price Of The Book</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>